[package]
name = "picotin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
cgroups-rs = "0.3.2"
clap = { version = "4.3.3", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.19"
rand = "0.8.5"
