[package]
name = "picotin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.94"
async-executor = "1.13.1"
cgroups-rs = "0.3.4"
clap = { version = "4.5.23", features = ["derive"] }
env_logger = "0.11.5"
futures-lite = "2.5.0"
futures-util = "0.3.31"
log = "0.4.22"
netlink-proto = { version = "0.11.3", default-features = false, features = ["smol_socket"] }
nix = { version = "0.29.0", features = ["sched"] }
rand = "0.9.1"
rtnetlink = { version = "0.16.0", default-features = false, features = ["smol_socket"] }
unshare = "0.7.0"
